frontend/test/should_pass/container_node_req.gm
node class A;
edge class E;
