frontend/test/should_fail/inh_model_003.gm
node class A;
edge class B extends A;
